--- a/slyles/slyles.css
+++ b/slyles/slyles.css
@@ -1,3 +1,15 @@
-*{
+* {
     margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+ul {
+    display: flex;
+    justify-content: center;
+}
+
+ul li a{
+    display: block;
+    padding: 15px;
 }
