edit style menu

--- a/slyles/slyles.css
+++ b/slyles/slyles.css
@@ -13,16 +13,26 @@ li a {
     display: block;
     padding: 15px;
     text-decoration: none;
-}
-
-/* .topmenu {
     color: white;
-} */
+}
 
 nav>ul {
     background: black;
-    /* border-style: double; */
     border-bottom: 5px solid blue;
-    width: 960px;
+    /*width: 960px;*/
+    box-shadow:rgb(100,100,100)  0px 5px 5px;
+    height:40px;
 }
-gjfj
+
+header {
+    width:100%;
+    background: black;
+}
+.submenu{
+    position: absolute;
+    /*visibility: hidden;*/
+    list-style: ;
+    top:40px;
+    left:0;
+    background: blue;
+}
