--- a/slyles/slyles.css
+++ b/slyles/slyles.css
@@ -2,40 +2,58 @@
     margin: 0;
     padding: 0;
     list-style: none;
-}
-
-ul {
-   display:flex;
-    justify-content: center;
-}
-
-li a ul {
-    display: block;
-    padding: 15px;
-    text-decoration: none;
     color: white;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+body {
+    background-color:aquamarine
+}
+nav{
+    width: 100%;
+    position: fixed;
+}
+.topmenu{
+    display:flex;
     position: relative;
-    flex-direction: column;
+    top: 0;
+    height: 50px;
+    width: 100%;
+    display:flex;
+    justify-content:left;
+    align-items: center;
+    background-color: rgb(46, 45, 45);
+    border-bottom: 5px solid rgb(2, 150, 150);
+}
+.topmenu li,.topmenu a{
+    position: relative;
+    padding:18px;
+    transition: all 1.3s ease;
 }
 
-nav>ul {
-    background: black;
-    border-bottom: 5px solid blue;
-    /*width: 960px;*/
-    box-shadow:rgb(100,100,100)  0px 5px 5px;
-    height:40px;
+.topmenu li:hover{
+    background-color:rgb(2, 150, 150);
+    box-shadow: 1px 5px 10px -2px black;
+    transition: all 0.3s ease;
 }
 
-header {
-    width:100%;
-    background: black;
-}
-ul.submenu>li{left:150px;}
-.submenu{
+.submenu,.submenu ul{
     position: absolute;
-    /*visibility: hidden;*/
-    list-style: ;
-    top:40px;
-    left:0;
-    background: blue;
+    min-width: 160px;
+    left: 0;
+    top: 50px;
+    display: none;
+    background-color:rgb(2, 150, 150);
+}
+.submenu li{
+    border: 1px solid black;
+    /* min-width:150px; */
+}
+.submenu ul{
+    left: 160px;
+    top: 0px;
+}
+
+.topmenu li:hover>ul, .submenu li:hover>ul {
+    display: block;
 }
